objects/PB_Experiment__c.object
<CustomObject>
    <label>Experiment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experiments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Participants__c</fullName>
        <label>Max Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Interval_Days__c</fullName>
        <label>Evaluation Interval Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Control_Group_Split_Ratio__c</fullName>
        <label>Control Group Split Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experiment_Group_Split_Ratio__c</fullName>
        <label>Experiment Group Split Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>